...
                        <variation key="default">
                            <mask key="constraints">
                                <exclude reference="DVx-qw-5e4"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Decks" id="2Ka-xr-4oT">
                        <barButtonItem key="backBarButtonItem" title="Decks" id="GTw-Fd-266" userLabel="Decks"/>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="wIY-xl-1Ig">
                            <connections>
                                <segue destination="3Yx-eb-t7J" kind="presentation" id="IiA-Nt-E4f"/>
                            </connections>
                        </barButtonItem>
...
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YyE-nO-bIx">
                                <rect key="frame" x="4" y="20" width="592" height="44"/>
                                <items>
                                    <navigationItem title="Add Deck" id="r2Y-Cp-mY5">
                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="HfK-Bn-iEN">
                                            <connections>
                                                <action selector="cancelButtonPressed:" destination="3Yx-eb-t7J" id="Mv0-Vj-HDb"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="EFi-C2-Du6">
...
                                    </navigationItem>
                                </items>
                                <connections>
                                    <outlet property="delegate" destination="3Yx-eb-t7J" id="NZn-pI-CAI"/>
                                </connections>
                            </navigationBar>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter deck name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4eY-Rk-VYX">
                                <rect key="frame" x="20" y="94" width="560" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" spellCheckingType="no" returnKeyType="done"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select class:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KHb-zZ-K0P">
                                <rect key="frame" x="252" y="132" width="96" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3j1-Yi-Phn" userLabel="Decks1-3">
...
